# pypix

./: README.md  __init__.py  main.py  pix.py  pyproject.toml  requirements.txt  setup.py
pypix/: __init__.py  main.py  pix.py
pypix/core/: qrgen.py  services.py
pypix/core/styles/: border_styles.py  frame_styles.py  line_styles.py  marker_styles.py  qr_styler.py
pypix/core/utils/: image_utils.py  pix_parser.py  validators.py
tests/: test_generator.py  test_pix_parser.py
